2001-06-04  Gary Houston  <ghouston@arglist.com>

	* rw.scm (generic-write-string/partial, write-string/partial):
	removed.  write-string/partial is now in (ice-9 rw).

2001-05-29  Gary Houston  <ghouston@arglist.com>

	* rx/re-subst.scm: export regexp-substitute/global.  otherwise
	the version from (ice-9 regex) is used, but can't handle SREs.
	thanks to Paul Emsley for pointing out that
	regexp-substitute/global didn't work.

	* rx/re-low.scm: export regexp-match:start, regexp-match:end,
	regexp-match:string since they are used in re-subst.scm.  This
	fixes regexp-substitute.

2001-05-28  Gary Houston  <ghouston@arglist.com>

	* filesys.scm (create-directory, create-fifo, create-hard-link,
	create-symlink, create-file-thing): fixed.  for some reason
	these had never been ported to guile.  thanks to Paul Emsley
	for pointing out that create-directory didn't work.

2001-05-25  Gary Houston  <ghouston@arglist.com>

	* syscalls.scm (directory-files): initialise result with '(), not ().
	Thanks to Paul Emsley.

	* netconst.scm (options/linger etc.) use '() not () for recent CVS
	guile.  Thanks to Paul Emsley.

2001-04-29  Gary Houston  <ghouston@arglist.com>

	* rw.scm: use module (ice-9 rw).

2001-01-25  Gary Houston  <ghouston@arglist.com>

	* rw.scm: export read-string!/partial.

2001-01-24  Gary Houston  <ghouston@arglist.com>

	* rdelim.scm: use module (ice-9 rdelim).
	export %read-delimited!.
        * awk.scm, scsh.scm: use module (scsh rdelim).

2001-01-06  Gary Houston  <ghouston@arglist.com>

	* rw.scm (generic-read-string!/partial, read-string!/partial):
	removed, since this version wasn't correct but it's now in
	guile-core.
	* README: "upgraded" the guile-core dependency to tomorrows
	CVS version.

2001-01-01  Gary Houston  <ghouston@arglist.com>

	* lib/string-lib.scm (string-unfold-right, join-strings,
	string-take-right, string-drop-right): 	don't export, since they are
	not defined.

2000-12-06  Gary Houston  <ghouston@arglist.com>
